@@ -51,7 +51,12 @@ host_modules= { module= fastjar; no_check_cross= true; };
 host_modules= { module= fileutils; };
 host_modules= { module= findutils; };
 host_modules= { module= find; };
-host_modules= { module= fixincludes; };
+host_modules= { module= fixincludes;
+		missing= info;
+		missing= dvi;
+		missing= TAGS;
+		missing= install-info;
+		missing= installcheck; };
 host_modules= { module= flex; no_check_cross= true; };
 host_modules= { module= gas; bootstrap=true; };
 host_modules= { module= gcc; bootstrap=true; 
