@@ -1,3 +1,8 @@
+2004-11-05  Paolo Bonzini  <bonzini@gnu.org>
+
+	* Makefile.def (host fixincludes): Specify missing targets.
+	* Makefile.in: Regenerate.
+
 2004-11-04  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR other/17783
